--- a/Assignment 1/studentReg.html
+++ b/Assignment 1/studentReg.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Holland College Student Registration</title>
+
 </head>
 <body style="align-items: center">
 <main style=" display: flex; justify-content: center; align-items: center; height: 100%;">
@@ -22,15 +23,65 @@
                 </tr>
                 <tr>
                     <td>Address Street:</td>
-                    <td><input type="text" id="aName" name="aName"></td>
+                    <td><input type="text" id="aName" name="aName" style="width: 100%"></td>
                 </tr>
                 <tr>
-                    <td>Address Number:</td>
+                    <td>Address Street Number:</td>
                     <td><input type="text" id="aNumber" name="aNumber"></td>
+                </tr>
+                <tr>
+                    <td>Address Postal Code:</td>
+                    <td><input type="text" id="aPCode" name="aPCode"></td>
+                </tr>
+                <tr>
+                    <td>Address City:</td>
+                    <td><input type="text" id="aCity" name="aCity"></td>
+                </tr>
+                <tr>
+                    <td>Address Province:</td>
+                    <td><input type="text" id="aProvince" name="aProvince"></td>
                 </tr>
                 <tr>
                     <td>Phone Number:</td>
                     <td><input type="text" id="pNumber" name="pNumber"></td>
+                </tr>
+                <tr>
+                    <td>Number of Semesters:</td>
+                    <td>
+                        <select name="semesters" id="semesters">
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                            <option value="4">Four</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Number of Courses per Semester:</td>
+                    <td>
+                        <select name="cPerSemester" id="cPerSemester">
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                            <option value="4">Four</option>
+                            <option value="5">Five</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Health Care Deduction:</td>
+                    <td>
+                        <select name="HCDeduction" id="HCDeduction">
+                            <option value="600">Yes</option>
+                            <option value="0">No</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Scholarship Amount</td>
+                    <td>
+                        <input type="text" size="7" value="0" name="Scholarship" id="Scholarship">
+                    </td>
                 </tr>
                 <tr>
                     <td></td>
